# compare

./: CMakeLists.txt  README.md
include/compare/: compare.hpp
include/compare/detail/: compare_detail.hpp
src/: main.cpp
